@@ -409,6 +409,9 @@ void WakeUp::QueueMsg
 			++it;
 		}
 	}
+	/* make sure the SendAttempts is reset to 0 */
+	_item.m_msg->SetSendAttempts(0);
+
 	m_pendingQueue.push_back( _item );
 	m_mutex->Unlock();
 }
