@@ -199,6 +199,9 @@ Version 1.3
  - Issue #656 - Update ZME064435 and ZME05470 with Scene Activation Command
    Class from CompaTech (Justin)
  - Pull Request #655 - Update BeNext Devices from ewgast (Justin)
+ - Issue #658 - Reset a Message SendAttempts value when moving to the
+   Wakeup Queue, otherwise it gets dropped when we attempt to send it when
+   the device wakes up as it exceeds the retry count. (Justin)
 
 
 Version 1.2 
